Continued work on chroot. It is now loading, started work on actually performing tasks in it.